--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     ports:
       - 8000:8000
     environment:
-      - MODEL_SERVICE_URL=${MODEL_SERVICE_URL}
-    command: python manage.py runserver ${APP_URL}
+      - MODEL_SERVICE_URL=http://172.17.0.1:5000
+    command: python manage.py runserver 0.0.0.0:8000
   model_service:
     image: ghcr.io/remla24-team6/model-service:latest
     ports:
       - 5000:5000
-    command: flask run --host=0.0.0.0
+    command: poetry run flask run --host=0.0.0.0 -p 5000
