Basic ansible set up

--- a/inventory.cfg
+++ b/inventory.cfg
@@ -1,6 +1,10 @@
-[controller]
-controller
+[kubernetes:children]
+controllers
+workers
 
-[worker_nodes]
-node1
-node2
+[controllers]
+controller1 ansible_host=192.168.60.2
+
+[workers]
+node1 ansible_host=192.168.61.2
+node1 ansible_host=192.168.61.3
