--- a/kubernetes/app.yml
+++ b/kubernetes/app.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: phishing-detection-app
+  name: phishing-detection-app-v1
 spec:
   replicas: 1
   selector:
@@ -9,12 +9,34 @@ spec:
       deployment: app
   template:
     metadata:
-      labels:
-        deployment: app
+      labels: { deployment: app, version: v1 }
     spec:
       containers:
       - name: django-app
         image: ghcr.io/remla24-team6/app:latest
+        ports:
+        - containerPort: 8000
+        envFrom:
+        - configMapRef:
+            name: app-config
+        command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: phishing-detection-app-v2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      deployment: app
+  template:
+    metadata:
+      labels: { deployment: app, version: v2 }
+    spec:
+      containers:
+      - name: django-app
+        image: ghcr.io/remla24-team6/app:0.0.7
         ports:
         - containerPort: 8000
         envFrom:
