--- a/kubernetes/app.yml
+++ b/kubernetes/app.yml
@@ -1,16 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: phishing-detection-app
+  name: phishing-detection-app-v1
 spec:
   replicas: 1
   selector:
     matchLabels:
-      deployment: app
+      deployment: app-v1
   template:
     metadata:
       labels:
-        deployment: app
+        deployment: app-v1
+      annotations:
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '8000'
     spec:
       containers:
       - name: django-app
@@ -22,13 +25,55 @@ spec:
             name: app-config
         command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: phishing-detection-app-v2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      deployment: app-v2
+  template:
+    metadata:
+      labels:
+        deployment: app-v2
+      annotations:
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '8000'
+    spec:
+      containers:
+      - name: django-app
+        image: ghcr.io/remla24-team6/app:0.0.11
+        ports:
+        - containerPort: 8000
+        envFrom:
+        - configMapRef:
+            name: app-config
+        command: ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: django-app-service
+  name: django-app-service-v1
+  labels:
+    deployment: app
 spec:
   selector:
+    deployment: app-v1
+  ports:
+    - port: 8000
+      targetPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: django-app-service-v2
+  labels:
     deployment: app
+spec:
+  selector:
+    deployment: app-v2
   ports:
     - port: 8000
       targetPort: 8000
