--- a/kubernetes/app.yml
+++ b/kubernetes/app.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: phishing-detection-app-v1
+  namespace: operations
 spec:
   replicas: 1
   selector:
@@ -25,6 +26,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: phishing-detection-app-v2
+  namespace: operations
 spec:
   replicas: 1
   selector:
@@ -48,6 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: django-app-service
+  namespace: operations
 spec:
   selector:
     deployment: app
