--- a/kubernetes/environment.yml
+++ b/kubernetes/environment.yml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
+  namespace: operations
 data:
   MODEL_SERVICE_URL: "http://model-service:5000"
