--- a/kubernetes/model.yml
+++ b/kubernetes/model.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: phishing-detection-model
+  namespace: operations
 spec:
   replicas: 1
   selector:
@@ -23,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: model-service
+  namespace: operations
 spec:
   selector:
     deployment: model
