--- a/kubernetes/model.yml
+++ b/kubernetes/model.yml
@@ -12,6 +12,9 @@ spec:
     metadata:
       labels:
         deployment: model
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "5000"
     spec:
       containers:
         - name: model
