--- a/ratelimiting.yaml
+++ b/ratelimiting.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ratelimit-config
+  namespace: operations
 data:
   config.yaml: |
     domain: ratelimit
